Update app with QR scanner libraries and UI improvements

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
         rel="stylesheet">
 
     <!-- QR Code Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js"></script>
-    <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
+    <script src="qrcode.min.js"></script>
+    <script src="html5-qrcode.min.js"></script>
 
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
@@ -517,7 +517,7 @@
                                     <p>Fill in the form and register to generate QR code</p>
                                 </div>
                                 <div class="qr-result hidden" id="qr-result">
-                                    <canvas id="qr-canvas"></canvas>
+                                    <div id="qr-canvas" style="display:inline-block;"></div>
                                     <div class="qr-info">
                                         <span class="qr-medicine-name" id="qr-med-name"></span>
                                         <span class="qr-batch" id="qr-batch-id"></span>
